--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: pockit
-version: '0.1.2'
+version: '0.1.3'
 summary: Unofficial Pocket Client
 description: Unofficial Pocket Client
 
@@ -20,6 +20,7 @@ apps:
       - alsa
       - location-control
       - location-observe
+      - browser-sandbox
 
 parts:
   launcher:
