--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: pockit
-version: '0.1.3'
+version: '0.1.4'
 summary: Unofficial Pocket Client
 description: Unofficial Pocket Client
 
@@ -35,6 +35,8 @@ parts:
     build-packages:
     - ubuntu-sdk-libs
     - qtubuntu-desktop
+    - qmlscene
+    - qml-module-ubuntu-components
     - qtdeclarative5-dev
     stage-packages:
     - ubuntu-sdk-libs
